# PACE-Challenge-2020

./: LICENSE  README.md  config.hpp.in  meson.build  meson_options.txt  run-random.py
instance_generator/: graph.py  main.py  trees.py
src/: block-sieve.hpp  connected-components.hpp  data-structures.hpp  directed-graph.hpp  graph.hpp  io.hpp  kernelization.cpp  kernelization.hpp  main.cpp  mm.cpp  mm.hpp  naive-branching-solver.cpp  naive-branching-solver.hpp  precedence-by-inclusion.hpp  simple-pid-solver.cpp  simple-pid-solver.hpp  subgraph.hpp  utilities.cpp  utilities.hpp
statistics/: degrees  diameters  neighborhood_intersection
